[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Race to Mars.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/spaceship-system-break-down.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Emerald.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/MainMenu.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 768, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 768, 600 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
Coin = ExtResource( 7 )
Emerald = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 256, 300 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EmeraldTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 256, 300 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 768, 0 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MainMenu" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="hit" from="Player" to="." method="gamer_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="EmeraldTimer" to="." method="_on_EmeraldTimer_timeout"]
[connection signal="start_game" from="MainMenu" to="." method="new_game"]
